--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -93,11 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "print(a)"
    ]
@@ -173,12 +181,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=5\n",
+    "b=2\n",
+    "print(a)\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,12 +211,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=a\n",
+    "a=b \n",
+    "b=c \n",
+    "print(a, b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,12 +240,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a vaut hello word et b vaut 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"a vaut\", a, \"et b vaut\", b)     "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,12 +266,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello word\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=\"hello word\"\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,7 +322,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "type(5)\n",
+    "type(5.0)\n",
+    "type(\"5\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -280,6 +341,13 @@
     "* `[5, 2]`\n",
     "* `{5, 2}`\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
